--- a/index.html
+++ b/index.html
@@ -3,39 +3,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport"
-        content="width=device-width,
-                 initial-scale=1,
-                 maximum-scale=5,
-                 minimum-scale=1">
+        content="width=device-width,initial-scale=1">
   <title>Desert Seas Consultancies</title>
   <style>
-    /* make the container fill the screen and allow pinch-zoom & scroll */
-    html, body {
-      margin:0; padding:0;
-      height:100%;
-      overflow:auto;
-      -webkit-overflow-scrolling: touch;
-    }
-    #viewer {
-      position:absolute;
-      top:0; right:0; bottom:0; left:0;
-    }
-    /* embed/object/iframe all fill the container */
-    #viewer object,
-    #viewer embed,
-    #viewer iframe {
-      width:100%; height:100%; border:none;
-    }
+    html, body { margin:0; padding:0; height:100%; overflow:hidden; }
+    iframe { width:100%; height:100%; border:none; }
   </style>
 </head>
 <body>
-  <div id="viewer">
-    <object data="DesertSeasConsultancies.pdf" type="application/pdf">
-      <embed src="DesertSeasConsultancies.pdf" type="application/pdf">
-      <p>Your browser doesn’t support inline PDFs.
-         <a href="DesertSeasConsultancies.pdf" target="_blank">Download the PDF</a>.
-      </p>
-    </object>
-  </div>
+  <iframe
+    src="DesertSeasConsultancies.pdf
+         #toolbar=0
+         &navpanes=0
+         &scrollbar=0
+         &zoom=page-width"
+    type="application/pdf">
+  </iframe>
 </body>
 </html>
